gcc/testsuite/rust/rustc/ui/error-codes/E0534.rs
#[inline()] // { dg-error ".E0534." "" { target *-*-* } }
pub fn something() {}

fn main() {
    something();
}

